[metadata]
name = photo-woylie
version = 0.0.5
author = Yoshtec
author_email = yoshtec@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yoshtec/photo-woylie
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
keywords =
    plist
    apple
    cat
    metadata

[options]
packages = find:
install_requires =
    click
    requests
python_requires = >=3.5

[options.entry_points]
console_scripts =
    woylie = woylie.woylie:woylie
