[metadata]
name = photo-woylie
version = 0.1.34
author = Yoshtec
author_email = yoshtec@gmail.com
description = woylie keeps efficiently track and sorts all your photos. Uses the power of reflinks, exif metadata, openstreetmap tamed with python ðŸ!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yoshtec/photo-woylie
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
keywords =
    picture
    sort
    exif
    metadata
    gps-tagging

[options]
packages = find:
install_requires =
    click
    requests
    sqlite-utils
    haversine
python_requires = >=3.7

[options.entry_points]
console_scripts =
    woylie = woylie.cli:cli
